--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -153,7 +153,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.48RNGFreq_Value=24000000
 RCC.48USBFreq_Value=24000000
@@ -165,12 +165,13 @@ RCC.APB2TimFreq_Value=16000000
 RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=16000000
+RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=16000000
 RCC.I2C3Freq_Value=16000000
-RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIMFreq_Value=32768
 RCC.LPUARTFreq_Value=16000000
@@ -181,6 +182,7 @@ RCC.MSI_VALUE=2097000
 RCC.PLLCLKFreq_Value=24000000
 RCC.PWRFreq_Value=16000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=16000000
@@ -204,9 +206,10 @@ SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.IPParameters=TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
