--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -15,7 +15,8 @@ KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
 Mcu.IP1=DMA
-Mcu.IP10=TIM22
+Mcu.IP10=TIM21
+Mcu.IP11=TIM22
 Mcu.IP2=LPTIM1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -23,8 +24,8 @@ Mcu.IP5=RTC
 Mcu.IP6=SPI1
 Mcu.IP7=SYS
 Mcu.IP8=TIM2
-Mcu.IP9=TIM21
-Mcu.IPNb=11
+Mcu.IP9=TIM6
+Mcu.IPNb=12
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -35,27 +36,31 @@ Mcu.Pin12=PB15
 Mcu.Pin13=PC7
 Mcu.Pin14=PA13
 Mcu.Pin15=PA14
-Mcu.Pin16=PB6
-Mcu.Pin17=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_Calendar
+Mcu.Pin16=PA15
+Mcu.Pin17=PB6
+Mcu.Pin18=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin19=VP_RTC_VS_RTC_Activate
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin21=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM2_VS_NoETR
-Mcu.Pin24=VP_TIM21_VS_no_output1
-Mcu.Pin25=VP_TIM21_VS_NoETR
-Mcu.Pin26=VP_TIM22_VS_no_output1
-Mcu.Pin27=VP_TIM22_VS_NoETR
+Mcu.Pin20=VP_RTC_VS_RTC_Calendar
+Mcu.Pin21=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin22=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM2_VS_no_output2
+Mcu.Pin25=VP_TIM2_VS_NoETR
+Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM21_VS_no_output1
+Mcu.Pin28=VP_TIM21_VS_no_output2
+Mcu.Pin29=VP_TIM21_VS_NoETR
 Mcu.Pin3=PC1
+Mcu.Pin30=VP_TIM22_VS_no_output1
+Mcu.Pin31=VP_TIM22_VS_NoETR
 Mcu.Pin4=PC3
 Mcu.Pin5=PA0
 Mcu.Pin6=PA5
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=28
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -75,12 +80,14 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
+PA15.Signal=S_TIM2_CH1
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
@@ -153,7 +160,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.48RNGFreq_Value=24000000
 RCC.48USBFreq_Value=24000000
@@ -206,26 +213,37 @@ SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=8.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM2.IPParameters=TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
+TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2,Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output
+TIM2.Period=0x8000
+TIM2.Prescaler=0
 TIM2.TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2=TIM2_ETR_LSE
 TIM21.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM21.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM21.CounterMode=TIM_COUNTERMODE_DOWN
-TIM21.IPParameters=Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21,CounterMode,AutoReloadPreload,Period
+TIM21.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
+TIM21.CounterMode=TIM_COUNTERMODE_UP
+TIM21.IPParameters=Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21,CounterMode,AutoReloadPreload,Period,Channel-Output Compare2 No Output
 TIM21.Period=0x8000
 TIM21.Pulse-Output\ Compare1\ No\ Output=0
 TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 TIM22.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM22.CounterMode=TIM_COUNTERMODE_DOWN
-TIM22.IPParameters=Channel-Output Compare1 No Output,TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode
-TIM22.Period=0x8000
+TIM22.CounterMode=TIM_COUNTERMODE_UP
+TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode,Prescaler,Channel-Output Compare1 No Output
+TIM22.Period=1920
+TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=30720
+TIM6.Prescaler=0x8000
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -242,11 +260,17 @@ VP_TIM21_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM21
 VP_TIM21_VS_NoETR.Signal=TIM21_VS_NoETR
 VP_TIM21_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM21_VS_no_output1.Signal=TIM21_VS_no_output1
+VP_TIM21_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM21_VS_no_output2.Signal=TIM21_VS_no_output2
 VP_TIM22_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM22
 VP_TIM22_VS_NoETR.Signal=TIM22_VS_NoETR
 VP_TIM22_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM22_VS_no_output1.Signal=TIM22_VS_no_output1
 VP_TIM2_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM2
 VP_TIM2_VS_NoETR.Signal=TIM2_VS_NoETR
+VP_TIM2_VS_no_output2.Mode=Output Compare2 No Output
+VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
