--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -45,8 +45,8 @@ Mcu.Pin20=VP_RTC_VS_RTC_Calendar
 Mcu.Pin21=VP_RTC_VS_RTC_Alarm_B_Intern
 Mcu.Pin22=VP_RTC_VS_RTC_Alarm_A_Intern
 Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM2_VS_no_output2
-Mcu.Pin25=VP_TIM2_VS_NoETR
+Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM2_VS_no_output2
 Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin27=VP_TIM21_VS_no_output1
 Mcu.Pin28=VP_TIM21_VS_no_output2
@@ -81,6 +81,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
 PA13.Mode=Serial_Wire
@@ -160,7 +161,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48CLKFreq_Value=24000000
 RCC.48RNGFreq_Value=24000000
 RCC.48USBFreq_Value=24000000
@@ -223,10 +224,9 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2,Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output
 TIM2.Period=0x8000
 TIM2.Prescaler=0
-TIM2.TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2=TIM2_ETR_LSE
 TIM21.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM21.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM21.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
@@ -241,9 +241,9 @@ TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,Count
 TIM22.Period=1920
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=30720
-TIM6.Prescaler=0x8000
+TIM6.IPParameters=Period,Prescaler
+TIM6.Period=32768
+TIM6.Prescaler=0x100
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -266,8 +266,8 @@ VP_TIM22_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM22
 VP_TIM22_VS_NoETR.Signal=TIM22_VS_NoETR
 VP_TIM22_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM22_VS_no_output1.Signal=TIM22_VS_no_output1
-VP_TIM2_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM2
-VP_TIM2_VS_NoETR.Signal=TIM2_VS_NoETR
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
