--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -68,7 +68,7 @@ MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -162,50 +162,54 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
-RCC.48CLKFreq_Value=24000000
-RCC.48RNGFreq_Value=24000000
-RCC.48USBFreq_Value=24000000
-RCC.AHBFreq_Value=16000000
-RCC.APB1Freq_Value=16000000
-RCC.APB1TimFreq_Value=16000000
-RCC.APB2Freq_Value=16000000
-RCC.APB2TimFreq_Value=16000000
-RCC.FCLKCortexFreq_Value=16000000
+RCC.48CLKFreq_Value=32000000
+RCC.48RNGFreq_Value=32000000
+RCC.48USBFreq_Value=32000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=16000000
+RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=16000000
-RCC.I2C3Freq_Value=16000000
-RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.I2C1Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIMFreq_Value=32768
-RCC.LPUARTFreq_Value=16000000
+RCC.LPUARTFreq_Value=32000000
 RCC.LSI_VALUE=37000
 RCC.LptimClockSelection=RCC_LPTIM1CLKSOURCE_LSE
-RCC.MCOPinFreq_Value=16000000
+RCC.MCOPinFreq_Value=32000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=24000000
-RCC.PWRFreq_Value=16000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMUL=RCC_PLLMUL_4
+RCC.PWRFreq_Value=32000000
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCClockSelectionVirtual=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=16000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
-RCC.TIMFreq_Value=16000000
-RCC.TimerFreq_Value=16000000
-RCC.USART1Freq_Value=16000000
-RCC.USART2Freq_Value=16000000
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIMFreq_Value=32000000
+RCC.TimerFreq_Value=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=16000000
-RCC.VCOOutputFreq_Value=48000000
+RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
 RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B
+RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B,WeekDay,Month,Year
+RTC.Month=RTC_MONTH_DECEMBER
+RTC.WeekDay=RTC_WEEKDAY_SUNDAY
+RTC.Year=19
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
@@ -217,7 +221,7 @@ SH.GPXTI2.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=8.0 MBits/s
+SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
@@ -243,7 +247,7 @@ TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM6.IPParameters=Period,Prescaler
 TIM6.Period=32768
-TIM6.Prescaler=0x100
+TIM6.Prescaler=0x80
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
