--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 ADC.IPParameters=SamplingTime,LowPowerAutoPowerOff
-ADC.LowPowerAutoPowerOff=ENABLE
+ADC.LowPowerAutoPowerOff=DISABLE
 ADC.SamplingTime=ADC_SAMPLETIME_79CYCLES_5
 Dma.Request0=SPI1_TX
 Dma.RequestsNb=1
@@ -33,37 +33,40 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PB15
-Mcu.Pin13=PC7
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin19=VP_RTC_VS_RTC_Activate
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB2
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PC7
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
 Mcu.Pin2=PC0
-Mcu.Pin20=VP_RTC_VS_RTC_Calendar
-Mcu.Pin21=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin22=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin23=VP_SYS_VS_Systick
-Mcu.Pin24=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin25=VP_TIM2_VS_no_output2
-Mcu.Pin26=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM21_VS_no_output1
-Mcu.Pin28=VP_TIM21_VS_no_output2
-Mcu.Pin29=VP_TIM21_VS_NoETR
+Mcu.Pin20=PB6
+Mcu.Pin21=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin22=VP_RTC_VS_RTC_Activate
+Mcu.Pin23=VP_RTC_VS_RTC_Calendar
+Mcu.Pin24=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin25=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM2_VS_no_output2
+Mcu.Pin28=VP_TIM2_VS_NoETR
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PC1
-Mcu.Pin30=VP_TIM22_VS_no_output1
-Mcu.Pin31=VP_TIM22_VS_NoETR
+Mcu.Pin30=VP_TIM21_VS_no_output1
+Mcu.Pin31=VP_TIM21_VS_no_output2
+Mcu.Pin32=VP_TIM21_VS_NoETR
+Mcu.Pin33=VP_TIM22_VS_no_output1
+Mcu.Pin34=VP_TIM22_VS_NoETR
 Mcu.Pin4=PC3
 Mcu.Pin5=PA0
 Mcu.Pin6=PA5
 Mcu.Pin7=PA7
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
-Mcu.PinsNb=32
+Mcu.Pin8=PC4
+Mcu.Pin9=PC5
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -96,6 +99,8 @@ PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_PuPd
@@ -127,6 +132,12 @@ PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC3.Locked=true
 PC3.Signal=GPIO_Output
+PC4.GPIOParameters=PinState
+PC4.Locked=true
+PC4.PinState=GPIO_PIN_SET
+PC4.Signal=GPIO_Output
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC7.Locked=true
 PC7.Signal=GPIO_Output
 PCC.Checker=true
@@ -164,7 +175,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
@@ -231,26 +242,27 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output
-TIM2.Period=0x8000
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output,TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
+TIM2.Period=0x3FFF
 TIM2.Prescaler=0
+TIM2.TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2=TIM2_ETR_LSE
 TIM21.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM21.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM21.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM21.CounterMode=TIM_COUNTERMODE_UP
 TIM21.IPParameters=Channel-Output Compare1 No Output,Pulse-Output Compare1 No Output,TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21,CounterMode,AutoReloadPreload,Period,Channel-Output Compare2 No Output
-TIM21.Period=0x8000
+TIM21.Period=0x7FFF
 TIM21.Pulse-Output\ Compare1\ No\ Output=0
 TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 TIM22.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM22.CounterMode=TIM_COUNTERMODE_UP
 TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode,Prescaler,Channel-Output Compare1 No Output
-TIM22.Period=1920
+TIM22.Period=31
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM6.IPParameters=Period,Prescaler
-TIM6.Period=32768
-TIM6.Prescaler=0x80
+TIM6.Period=65535
+TIM6.Prescaler=0x40
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
 VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
@@ -273,8 +285,8 @@ VP_TIM22_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM22
 VP_TIM22_VS_NoETR.Signal=TIM22_VS_NoETR
 VP_TIM22_VS_no_output1.Mode=Output Compare1 No Output
 VP_TIM22_VS_no_output1.Signal=TIM22_VS_no_output1
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM2
+VP_TIM2_VS_NoETR.Signal=TIM2_VS_NoETR
 VP_TIM2_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
