--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -31,42 +31,43 @@ Mcu.IP9=TIM6
 Mcu.IPNb=12
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PB2
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PC7
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PA15
-Mcu.Pin2=PC0
-Mcu.Pin20=PB6
-Mcu.Pin21=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin22=VP_RTC_VS_RTC_Activate
-Mcu.Pin23=VP_RTC_VS_RTC_Calendar
-Mcu.Pin24=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin25=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM2_VS_no_output2
-Mcu.Pin28=VP_TIM2_VS_NoETR
-Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin3=PC1
-Mcu.Pin30=VP_TIM21_VS_no_output1
-Mcu.Pin31=VP_TIM21_VS_no_output2
-Mcu.Pin32=VP_TIM21_VS_NoETR
-Mcu.Pin33=VP_TIM22_VS_no_output1
-Mcu.Pin34=VP_TIM22_VS_NoETR
-Mcu.Pin4=PC3
-Mcu.Pin5=PA0
-Mcu.Pin6=PA5
-Mcu.Pin7=PA7
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=35
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PC5
+Mcu.Pin11=PB0
+Mcu.Pin12=PB1
+Mcu.Pin13=PB2
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PC7
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA15
+Mcu.Pin21=PB6
+Mcu.Pin22=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_RTC_VS_RTC_Calendar
+Mcu.Pin25=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM2_VS_no_output2
+Mcu.Pin29=VP_TIM2_VS_NoETR
+Mcu.Pin3=PC0
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM21_VS_no_output1
+Mcu.Pin32=VP_TIM21_VS_no_output2
+Mcu.Pin33=VP_TIM21_VS_NoETR
+Mcu.Pin34=VP_TIM22_VS_no_output1
+Mcu.Pin35=VP_TIM22_VS_NoETR
+Mcu.Pin4=PC1
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0
+Mcu.Pin7=PA5
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -126,6 +127,8 @@ PC0.Locked=true
 PC0.Signal=GPIO_Output
 PC1.Locked=true
 PC1.Signal=GPIO_Output
+PC13.Mode=Calibration_1Hz
+PC13.Signal=RTC_OUT_CALIB
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -257,7 +260,7 @@ TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 TIM22.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM22.CounterMode=TIM_COUNTERMODE_UP
 TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode,Prescaler,Channel-Output Compare1 No Output
-TIM22.Period=31
+TIM22.Period=1919
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM6.IPParameters=Period,Prescaler
