--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -33,41 +33,42 @@ Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PC7
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin10=PB2
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PC7
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA15
-Mcu.Pin21=PB6
-Mcu.Pin22=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_RTC_VS_RTC_Calendar
-Mcu.Pin25=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM2_VS_no_output2
-Mcu.Pin29=VP_TIM2_VS_NoETR
-Mcu.Pin3=PC0
-Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM21_VS_no_output1
-Mcu.Pin32=VP_TIM21_VS_no_output2
-Mcu.Pin33=VP_TIM21_VS_NoETR
-Mcu.Pin34=VP_TIM22_VS_no_output1
-Mcu.Pin35=VP_TIM22_VS_NoETR
-Mcu.Pin4=PC1
-Mcu.Pin5=PC3
-Mcu.Pin6=PA0
-Mcu.Pin7=PA5
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=36
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin25=VP_RTC_VS_RTC_Calendar
+Mcu.Pin26=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_no_output2
+Mcu.Pin3=PA3
+Mcu.Pin30=VP_TIM2_VS_NoETR
+Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM21_VS_no_output1
+Mcu.Pin33=VP_TIM21_VS_no_output2
+Mcu.Pin34=VP_TIM21_VS_NoETR
+Mcu.Pin35=VP_TIM22_VS_no_output1
+Mcu.Pin36=VP_TIM22_VS_NoETR
+Mcu.Pin4=PA5
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -89,13 +90,16 @@ NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-PA0.Mode=IN0
-PA0.Signal=ADC_IN0
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
 PA15.Signal=S_TIM2_CH1
+PA3.Locked=true
+PA3.Mode=IN3
+PA3.Signal=ADC_IN3
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
@@ -123,20 +127,20 @@ PB2.GPIOParameters=GPIO_PuPd
 PB2.GPIO_PuPd=GPIO_PULLDOWN
 PB2.Locked=true
 PB2.Signal=GPXTI2
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Signal=GPIO_Output
-PC0.Locked=true
-PC0.Signal=GPIO_Output
-PC1.Locked=true
-PC1.Signal=GPIO_Output
 PC13.Mode=Calibration_1Hz
 PC13.Signal=RTC_OUT_CALIB
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.Locked=true
-PC3.Signal=GPIO_Output
 PC4.GPIOParameters=PinState
 PC4.Locked=true
 PC4.PinState=GPIO_PIN_SET
