--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -20,34 +20,34 @@ Mcu.IP0=ADC
 Mcu.IP1=DMA
 Mcu.IP10=TIM21
 Mcu.IP11=TIM22
-Mcu.IP2=LPTIM1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
 Mcu.IP9=TIM6
 Mcu.IPNb=12
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB2
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PC7
-Mcu.Pin15=PA10
-Mcu.Pin16=PA13
-Mcu.Pin17=PA14
-Mcu.Pin18=PA15
-Mcu.Pin19=PB3
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PC7
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB6
-Mcu.Pin23=VP_LPTIM1_VS_LPTIM_counterModeInternalClock
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
 Mcu.Pin24=VP_RTC_VS_RTC_Activate
 Mcu.Pin25=VP_RTC_VS_RTC_Calendar
 Mcu.Pin26=VP_RTC_VS_RTC_Alarm_B_Intern
@@ -56,19 +56,20 @@ Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.Pin29=VP_TIM2_VS_no_output2
 Mcu.Pin3=PA3
 Mcu.Pin30=VP_TIM2_VS_NoETR
-Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM21_VS_no_output1
-Mcu.Pin33=VP_TIM21_VS_no_output2
-Mcu.Pin34=VP_TIM21_VS_NoETR
-Mcu.Pin35=VP_TIM22_VS_no_output1
-Mcu.Pin36=VP_TIM22_VS_NoETR
+Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM21_VS_no_output1
+Mcu.Pin34=VP_TIM21_VS_no_output2
+Mcu.Pin35=VP_TIM21_VS_NoETR
+Mcu.Pin36=VP_TIM22_VS_no_output1
+Mcu.Pin37=VP_TIM22_VS_NoETR
 Mcu.Pin4=PA5
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=37
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC4
+Mcu.Pin8=PC5
+Mcu.Pin9=PB0
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -79,7 +80,6 @@ NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.LPTIM1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -102,6 +102,7 @@ PA3.Mode=IN3
 PA3.Signal=ADC_IN3
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
+PA6.Signal=S_TIM3_CH1
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
 PB0.Locked=true
@@ -184,7 +185,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
@@ -243,6 +244,8 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
@@ -269,11 +272,12 @@ TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,Count
 TIM22.Period=1919
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
+TIM3.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-Output Compare1 CH1,Period
+TIM3.Period=0xFFFF
 TIM6.IPParameters=Period,Prescaler
 TIM6.Period=65535
 TIM6.Prescaler=0x40
-VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Mode=Counts__internal_clock_event_00
-VP_LPTIM1_VS_LPTIM_counterModeInternalClock.Signal=LPTIM1_VS_LPTIM_counterModeInternalClock
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
@@ -298,6 +302,8 @@ VP_TIM2_VS_NoETR.Mode=ClockSourceETR_Mode2_Remap_TIM2
 VP_TIM2_VS_NoETR.Signal=TIM2_VS_NoETR
 VP_TIM2_VS_no_output2.Mode=Output Compare2 No Output
 VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
