--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -42,34 +42,33 @@ Mcu.Pin15=PC7
 Mcu.Pin16=PA10
 Mcu.Pin17=PA13
 Mcu.Pin18=PA14
-Mcu.Pin19=PA15
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB4
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
-Mcu.Pin25=VP_RTC_VS_RTC_Calendar
-Mcu.Pin26=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM2_VS_no_output2
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_RTC_VS_RTC_Calendar
+Mcu.Pin25=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM2_VS_no_output2
+Mcu.Pin29=VP_TIM2_VS_NoETR
 Mcu.Pin3=PA3
-Mcu.Pin30=VP_TIM2_VS_NoETR
-Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM21_VS_no_output1
-Mcu.Pin34=VP_TIM21_VS_no_output2
-Mcu.Pin35=VP_TIM21_VS_NoETR
-Mcu.Pin36=VP_TIM22_VS_no_output1
-Mcu.Pin37=VP_TIM22_VS_NoETR
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM21_VS_no_output1
+Mcu.Pin33=VP_TIM21_VS_no_output2
+Mcu.Pin34=VP_TIM21_VS_NoETR
+Mcu.Pin35=VP_TIM22_VS_no_output1
+Mcu.Pin36=VP_TIM22_VS_NoETR
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB0
-Mcu.PinsNb=38
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -96,7 +95,6 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA15.Signal=S_TIM2_CH1
 PA3.Locked=true
 PA3.Mode=IN3
 PA3.Signal=ADC_IN3
@@ -185,7 +183,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_LPTIM1_Init-LPTIM1-false-HAL-true,8-MX_DMA_Init-DMA-false-HAL-true,9-MX_TIM22_Init-TIM22-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM6_Init-TIM6-false-HAL-true,12-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_TIM22_Init-TIM22-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
@@ -242,8 +240,6 @@ SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
-SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
@@ -253,8 +249,7 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-Output Compare2 No Output,TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
+TIM2.IPParameters=Prescaler,Period,Channel-Output Compare2 No Output,TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
 TIM2.Period=0x3FFF
 TIM2.Prescaler=0
 TIM2.TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2=TIM2_ETR_LSE
